--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,18 +1,21 @@
 [versions]
 junit = "5.10.2"
+mockito = "4.11.0"
 jetbrains-annotations = "13.0"
 plugin-spotless = "6.12.0"
-jedis = "3.7.0"
-
+lettuce = "6.3.2.RELEASE"
 
 [libraries]
 junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+mockito-junit = { module = "org.mockito:mockito-junit-jupiter", version.ref = "mockito" }
 jetbrains-annotations = { module = "org.jetbrains:annotations", version.ref = "jetbrains-annotations" }
-jedis = { module = "redis.clients:jedis", version.ref = "jedis" }
+lettuce = { module = "io.lettuce:lettuce-core", version.ref = "lettuce" }
+
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "plugin-spotless" }
 
 [bundles]
-test = ["junit-api", "junit-engine"]
+test = ["junit-api", "junit-engine" , "mockito-core", "mockito-junit"]
